--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,208 +1,3 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 28px 100px;
-  margin: 10px 90px;
-  gap: 0;
-  flex-direction: row;
-}
-header .small-menu, header #menu-btn {
-  display: none;
-}
-header #top-menu {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0;
-  margin: 0;
-  gap: 32px;
-  flex-direction: row;
-}
-header #social-medias {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0;
-  margin: 0;
-  gap: 24px;
-  flex-direction: row;
-}
-
-main {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0px 100px;
-  margin: 96px 90px;
-  gap: 0;
-  flex-direction: row;
-}
-main #header-text {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  padding: 0px;
-  margin: 0px;
-  gap: 30px;
-  flex-direction: column;
-}
-main #header-text #heading-and-subheading {
-  max-width: 560px;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  padding: 0;
-  margin: 0;
-  gap: 10px;
-  flex-direction: column;
-}
-main #header-text #heading-and-subheading #heading {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  padding: 10px 0px;
-  margin: 0;
-  gap: 10px;
-  flex-direction: column;
-}
-
-footer {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  padding: 0;
-  margin: 20px 180px;
-  gap: 20px;
-  flex-direction: column;
-}
-footer #clients-logos {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  padding: 0;
-  margin: 0;
-  gap: 30px;
-  flex-direction: row;
-}
-footer #clients-logos .logo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0;
-  margin: 0;
-  gap: 0;
-  flex-direction: row;
-}
-
-@media (max-width: 1100px) {
-  header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 28px 24px;
-    margin: 10px 48px;
-    gap: 0;
-    flex-direction: row;
-  }
-  main {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0px 24px;
-    margin: 96px 48px;
-    gap: 0;
-    flex-direction: row;
-  }
-  main #heading-and-subheading {
-    max-width: 400px;
-  }
-  footer {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    padding: 0;
-    margin: 20px 48px;
-    gap: 20px;
-    flex-direction: column;
-  }
-}
-@media (max-width: 710px) {
-  header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 28px 24px;
-    margin: 10px 16px;
-    gap: 0;
-    flex-direction: row;
-  }
-  header .small-menu {
-    display: none;
-  }
-  header .open {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    padding: 8px 24px;
-    margin: 0;
-    gap: 8px;
-    flex-direction: column;
-    position: absolute;
-    top: 60px;
-    left: 16px;
-  }
-  header #menu-btn {
-    display: block;
-  }
-  header #top-menu {
-    display: none;
-  }
-  main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0px;
-    margin: 96px 16px;
-    gap: 0;
-    flex-direction: column-reverse;
-  }
-  main #header-text {
-    align-items: center;
-  }
-  main #header-text #heading-and-subheading {
-    align-items: center;
-  }
-  main #header-text #heading-and-subheading #heading {
-    align-items: center;
-  }
-  footer {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    padding: 0;
-    margin: 20px 16px;
-    gap: 20px;
-    flex-direction: column;
-    overflow-inline: scroll;
-  }
-  footer::-webkit-scrollbar {
-    display: none;
-  }
-  footer {
-    scrollbar-width: 0px;
-  }
-  footer h3 {
-    position: sticky;
-    left: 0;
-  }
-}
 body {
   background: #080808;
 }
@@ -344,14 +139,21 @@ footer .logo:hover img {
     width: 145px;
   }
 }
-@media (max-width: 710px) {
+@media (max-width: 768px) {
   header #menu-btn {
     background: none;
     border: none;
     outline: none;
+    display: flex;
   }
   header #menu-btn:hover {
     cursor: pointer;
+  }
+  header #menu-btn span {
+    font-family: "IBM Plex Mono";
+    font-size: 16px;
+    font-weight: 400;
+    color: #9C9C9C;
   }
   header .small-menu {
     background: #1B1B1B;
@@ -361,6 +163,208 @@ footer .logo:hover img {
   }
   main .btn-green {
     width: 100%;
+    font-size: 14px;
+    padding: 21px 30px;
+  }
+}
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 28px 100px;
+  margin: 10px 90px;
+  gap: 0;
+  flex-direction: row;
+}
+header .small-menu, header #menu-btn {
+  display: none;
+}
+header #top-menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  gap: 32px;
+  flex-direction: row;
+}
+header #social-medias {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  gap: 24px;
+  flex-direction: row;
+}
+
+main {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 75px;
+  margin: 96px 90px;
+  gap: 0;
+  flex-direction: row;
+}
+main #header-text {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 0px;
+  margin: 0px;
+  gap: 30px;
+  flex-direction: column;
+}
+main #header-text #heading-and-subheading {
+  max-width: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 0;
+  margin: 0;
+  gap: 10px;
+  flex-direction: column;
+}
+main #header-text #heading-and-subheading #heading {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 10px 0px;
+  margin: 0;
+  gap: 10px;
+  flex-direction: column;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 0;
+  margin: 20px 180px;
+  gap: 20px;
+  flex-direction: column;
+}
+footer #clients-logos {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  gap: 30px;
+  flex-direction: row;
+}
+footer #clients-logos .logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  gap: 0;
+  flex-direction: row;
+}
+
+@media (max-width: 1100px) {
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 28px 24px;
+    margin: 10px 48px;
+    gap: 0;
+    flex-direction: row;
+  }
+  main {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px;
+    margin: 96px 48px;
+    gap: 0;
+    flex-direction: row;
+  }
+  footer {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 0;
+    margin: 20px 48px;
+    gap: 20px;
+    flex-direction: column;
+  }
+}
+@media (max-width: 768px) {
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 28px 24px;
+    margin: 10px 16px;
+    gap: 0;
+    flex-direction: row-reverse;
+  }
+  header .open {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 8px 24px;
+    margin: 0;
+    gap: 8px;
+    flex-direction: column;
+    position: absolute;
+    top: 85px;
+    right: 16px;
+  }
+  header #menu-btn {
+    display: block;
+  }
+  header #top-menu {
+    display: none;
+  }
+  main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
+    margin: 96px 16px;
+    gap: 0;
+    flex-direction: column-reverse;
+  }
+  main #header-text {
+    align-items: center;
+  }
+  main #header-text #heading-and-subheading {
+    align-items: center;
+    max-width: 600px;
+  }
+  main #header-text #heading-and-subheading #heading {
+    align-items: center;
+  }
+  footer {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 0;
+    margin: 20px 16px;
+    gap: 20px;
+    flex-direction: column;
+    overflow-inline: scroll;
+  }
+  footer::-webkit-scrollbar {
+    display: none;
+  }
+  footer {
+    scrollbar-width: 0px;
+  }
+  footer h3 {
+    position: sticky;
+    left: 0;
   }
 }
 
