adicionando a responsividade (media queries) no responsive.scss

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,172 +1,3 @@
-body {
-  background: #080808;
-}
-
-header {
-  background: #1B1B1B;
-  border-radius: 0px 0px 8px 8px;
-}
-header a {
-  color: #9C9C9C;
-  text-decoration: none;
-  transition: color 0.2s;
-}
-header a:hover {
-  color: #ffffff;
-}
-header a {
-  font-family: "IBM Plex Mono";
-  font-size: 14px;
-}
-header #social-medias a {
-  font-size: 16px;
-}
-header #menu-btn {
-  color: #ffffff;
-  font-size: 20px;
-}
-
-@keyframes girar {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-main #personal-img {
-  transition: all 1s;
-  border-radius: 100%;
-}
-main #personal-img:hover {
-  border: solid 20px #1B1B1B;
-  animation: girar 5s linear infinite;
-}
-main {
-  font-family: "IBM Plex Mono";
-}
-main h1 {
-  font-family: "Raleway";
-  font-size: 44px;
-  font-weight: 800;
-  color: #ffffff;
-}
-main h2 {
-  font-family: "Raleway";
-  font-size: 24px;
-  font-weight: 200;
-  color: #ffffff;
-}
-main p {
-  font-family: "IBM Plex Mono";
-  font-size: 14px;
-  font-weight: 400;
-  color: #9C9C9C;
-}
-main .btn-green {
-  color: #ffffff;
-  display: flex;
-  padding: 21px 64px;
-  align-items: baseline;
-  justify-content: center;
-  gap: 10px;
-  border-radius: 4px;
-  border: 1px solid #62BA1B;
-  background: #3F8E00;
-  box-shadow: 0 8px 30px 0 rgba(63, 142, 0, 0.5);
-  transition: all 0.3s;
-}
-main .btn-green:hover {
-  scale: 1.05;
-  cursor: pointer;
-}
-main .btn-green span {
-  font-family: "IBM Plex Mono";
-  font-size: 16px;
-  font-weight: 700;
-  color: #ffffff;
-}
-
-footer h3 {
-  font-family: "IBM Plex Mono";
-  font-size: 14px;
-  font-weight: 400;
-  color: #ffffff;
-}
-footer .logo {
-  border: solid 1px #1B1B1B;
-  border-radius: 8px;
-  width: 160px;
-  height: 60px;
-  transition: all 0.3s;
-}
-footer .logo img {
-  opacity: 0.3;
-  transition: all 0.3s;
-}
-footer .logo:hover {
-  cursor: pointer;
-  scale: 1.1;
-}
-footer .logo:hover img {
-  opacity: 1;
-}
-
-@media (max-width: 1100px) {
-  main h1 {
-    font-family: "Raleway";
-    font-size: 32px;
-    font-weight: 800;
-    color: #ffffff;
-  }
-  main h2 {
-    font-family: "Raleway";
-    font-size: 20px;
-    font-weight: 200;
-    color: #ffffff;
-  }
-  main p {
-    font-family: "IBM Plex Mono";
-    font-size: 12px;
-    font-weight: 400;
-    color: #9C9C9C;
-  }
-  main #personal-img {
-    width: 250px;
-    height: 250px;
-  }
-  footer .logo {
-    width: 145px;
-  }
-}
-@media (max-width: 768px) {
-  header #menu-btn {
-    background: none;
-    border: none;
-    outline: none;
-    display: flex;
-  }
-  header #menu-btn:hover {
-    cursor: pointer;
-  }
-  header #menu-btn span {
-    font-family: "IBM Plex Mono";
-    font-size: 16px;
-    font-weight: 400;
-    color: #9C9C9C;
-  }
-  header .small-menu {
-    background: #1B1B1B;
-  }
-  main {
-    text-align: center;
-  }
-  main .btn-green {
-    width: 100%;
-    font-size: 14px;
-    padding: 21px 30px;
-  }
-}
 * {
   box-sizing: border-box;
   margin: 0;
@@ -182,8 +13,24 @@ header {
   gap: 0;
   flex-direction: row;
 }
-header .small-menu, header #menu-btn {
+header #menu-btn {
   display: none;
+}
+header .small-menu {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 8px 24px;
+  margin: 0;
+  gap: 8px;
+  flex-direction: column;
+  position: fixed;
+  top: 85px;
+  right: -200px;
+  transition: ease-in-out all 0.3s;
+}
+header .open {
+  right: 16px;
 }
 header #top-menu {
   display: flex;
@@ -270,6 +117,124 @@ footer #clients-logos .logo {
   flex-direction: row;
 }
 
+body {
+  background: #080808;
+}
+
+header {
+  background: #1B1B1B;
+  border-radius: 0px 0px 8px 8px;
+}
+header a {
+  color: #9C9C9C;
+  text-decoration: none;
+  transition: color 0.2s;
+}
+header a:hover {
+  color: #ffffff;
+}
+header a {
+  font-family: "IBM Plex Mono";
+  font-size: 14px;
+}
+header #social-medias a {
+  font-size: 16px;
+}
+header #menu-btn {
+  color: #ffffff;
+  font-size: 20px;
+}
+
+@keyframes girar {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+main #personal-img {
+  transition: all 0.5s;
+  border-radius: 100%;
+  max-width: 350px;
+}
+main #personal-img:hover {
+  border: solid 20px #1B1B1B;
+  animation: girar 5s linear infinite;
+}
+main {
+  font-family: "IBM Plex Mono";
+}
+main h1 {
+  font-family: "Raleway";
+  font-size: 44px;
+  font-weight: 800;
+  color: #ffffff;
+}
+main h2 {
+  font-family: "Raleway";
+  font-size: 24px;
+  font-weight: 200;
+  color: #ffffff;
+}
+main p {
+  font-family: "IBM Plex Mono";
+  font-size: 14px;
+  font-weight: 400;
+  color: #9C9C9C;
+}
+main .btn-green {
+  color: #ffffff;
+  display: flex;
+  padding: 21px 64px;
+  align-items: baseline;
+  justify-content: center;
+  gap: 10px;
+  border-radius: 4px;
+  border: 1px solid #62BA1B;
+  background: #3F8E00;
+  box-shadow: 0 8px 30px 0 rgba(63, 142, 0, 0.5);
+  transition: all 0.3s;
+}
+main .btn-green:hover {
+  scale: 1.05;
+  cursor: pointer;
+}
+main .btn-green span {
+  font-family: "IBM Plex Mono";
+  font-size: 16px;
+  font-weight: 700;
+  color: #ffffff;
+}
+
+footer h3 {
+  font-family: "IBM Plex Mono";
+  font-size: 14px;
+  font-weight: 400;
+  color: #ffffff;
+}
+footer .logo {
+  border: solid 1px #1B1B1B;
+  border-radius: 8px;
+  width: 160px;
+  height: 60px;
+  transition: all 0.3s;
+}
+footer .logo img {
+  opacity: 0.3;
+  transition: all 0.3s;
+}
+footer .logo:hover {
+  cursor: pointer;
+  scale: 1.1;
+}
+footer .logo:hover img {
+  opacity: 1;
+}
+footer .logo:hover {
+  border-color: #62BA1B;
+}
+
 @media (max-width: 1100px) {
   header {
     display: flex;
@@ -289,6 +254,28 @@ footer #clients-logos .logo {
     gap: 0;
     flex-direction: row;
   }
+  main h1 {
+    font-family: "Raleway";
+    font-size: 32px;
+    font-weight: 800;
+    color: #ffffff;
+  }
+  main h2 {
+    font-family: "Raleway";
+    font-size: 20px;
+    font-weight: 200;
+    color: #ffffff;
+  }
+  main p {
+    font-family: "IBM Plex Mono";
+    font-size: 12px;
+    font-weight: 400;
+    color: #9C9C9C;
+  }
+  main #personal-img {
+    width: 250px;
+    height: 250px;
+  }
   footer {
     display: flex;
     justify-content: center;
@@ -297,6 +284,9 @@ footer #clients-logos .logo {
     margin: 20px 48px;
     gap: 20px;
     flex-direction: column;
+  }
+  footer .logo {
+    width: 145px;
   }
 }
 @media (max-width: 768px) {
@@ -309,23 +299,27 @@ footer #clients-logos .logo {
     gap: 0;
     flex-direction: row-reverse;
   }
-  header .open {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    padding: 8px 24px;
-    margin: 0;
-    gap: 8px;
-    flex-direction: column;
-    position: absolute;
-    top: 85px;
-    right: 16px;
-  }
   header #menu-btn {
     display: block;
+    background: none;
+    border: none;
+    outline: none;
+    display: flex;
+  }
+  header #menu-btn:hover {
+    cursor: pointer;
+  }
+  header #menu-btn span {
+    font-family: "IBM Plex Mono";
+    font-size: 16px;
+    font-weight: 400;
+    color: #9C9C9C;
   }
   header #top-menu {
     display: none;
+  }
+  header .small-menu {
+    background: #1B1B1B;
   }
   main {
     display: flex;
@@ -335,6 +329,7 @@ footer #clients-logos .logo {
     margin: 96px 16px;
     gap: 0;
     flex-direction: column-reverse;
+    text-align: center;
   }
   main #header-text {
     align-items: center;
@@ -345,6 +340,11 @@ footer #clients-logos .logo {
   }
   main #header-text #heading-and-subheading #heading {
     align-items: center;
+  }
+  main #header-text .btn-green {
+    width: 100%;
+    font-size: 14px;
+    padding: 21px 30px;
   }
   footer {
     display: flex;
