Fazendo alterações no site

--- a/assets/css/design.css
+++ b/assets/css/design.css
@@ -23,6 +23,23 @@ body {
   color: #9C9C9C;
 }
 
+.menu-responsivo {
+  gap: 16px;
+  display: none;
+}
+.menu-responsivo .botao-menu {
+  background: none;
+  border: none;
+  color: #9C9C9C;
+  font-size: 20px;
+}
+
+.p-menu {
+  font-size: 14px;
+  color: #9C9C9C;
+  font-weight: 400;
+}
+
 main .perfil h1 {
   color: #FFFFFF;
   font-family: "Raleway", sans-serif;
