--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,23 @@ body {
   color: #9C9C9C;
 }
 
+.menu-responsivo {
+  gap: 16px;
+  display: none;
+}
+.menu-responsivo .botao-menu {
+  background: none;
+  border: none;
+  color: #9C9C9C;
+  font-size: 20px;
+}
+
+.p-menu {
+  font-size: 14px;
+  color: #9C9C9C;
+  font-weight: 400;
+}
+
 main .perfil h1 {
   color: #FFFFFF;
   font-family: "Raleway", sans-serif;
@@ -66,6 +83,12 @@ header .menu {
   margin-right: 50px;
   padding: 0;
   gap: 30px;
+}
+
+.p-menu {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  line-height: 160%;
 }
 
 .container {
@@ -135,6 +158,42 @@ button {
 
 .ajuste-menu, header {
   padding: 12px 80px;
+}
+
+@media (max-width: 768px) {
+  body {
+    margin: 0 0 72px 0;
+  }
+  .header .container {
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+  .header .container .menu-navegacao {
+    display: none;
+  }
+  .menu-responsivo {
+    display: flex;
+  }
+  .container {
+    max-width: 100%;
+  }
+  .perfil {
+    flex-direction: column-reverse;
+  }
+  .perfil .left {
+    width: 350px;
+  }
+  .last-jobs {
+    max-width: 350px;
+    justify-content: flex-start;
+  }
+  .job-list {
+    overflow-x: auto;
+    gap: 24px;
+  }
+  .job-list li {
+    min-width: 160px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
