--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -29,6 +29,12 @@ header{
     @extend .alinhar-h-direita;
 }
 
+.p-menu{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    line-height: 160%;
+}
+
 
 .container{
     max-width: $break-desktop;
