--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,94 +1,118 @@
-@charset "UTF-8";
 body {
-  font-family: "IBM Plex Mono", monospace;
   background-color: #080808;
-  color: #9C9C9C;
-  font-size: 18px;
-  line-height: 160%;
-}
-
-.header {
-  border-radius: 0 0 6px 6px;
-  background: #1B1B1B;
-  color: #9C9C9C;
-}
-.header .menu li {
-  color: #9C9C9C;
   font-family: "IBM Plex Mono", monospace;
-  letter-spacing: 0.14px;
-}
-.header .menu-navegacao {
-  color: #9C9C9C;
-}
-.header .menu-social {
   color: #9C9C9C;
 }
 
-.menu-responsivo {
-  gap: 16px;
-  display: none;
-}
-.menu-responsivo .botao-menu {
-  background: none;
-  border: none;
-  color: #9C9C9C;
-  font-size: 20px;
+.header .container {
+  box-sizing: border-box;
+  background-color: #1B1B1B;
+  height: 74px;
+  padding-left: 100px;
+  padding-right: 100px;
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
 }
 
-.p-menu {
+.menu-navegacao a {
   font-size: 14px;
   color: #9C9C9C;
   font-weight: 400;
 }
 
-main .perfil h1 {
-  color: #FFFFFF;
-  font-family: "Raleway", sans-serif;
-  font-size: 44px;
+.menu-responsivo {
+  display: none;
+  gap: 16px;
 }
-main .perfil h3 {
-  color: #FFFFFF;
-  font-family: "Raleway", sans-serif;
-  font-size: 24px;
-  font-weight: 200;
-}
-main .perfil button {
-  font-size: 16px;
-  font-family: "IBM Plex Mono", monospace;
-  font-weight: 700;
-  color: #FFFFFF;
-  padding: 21px 64px;
-  border-radius: 4px;
-  border: 1px solid #62BA1B;
-  background: #62BA1B;
-  box-shadow: 0 8px 30px 0 rgba(63, 142, 0, 0.5);
+.menu-responsivo .botao-menu {
+  border: none;
+  background: none;
+  font-size: 20px;
+  color: #9C9C9C;
 }
 
-.lista-sem-estilo, .header {
+.menu-social a {
+  color: #9C9C9C;
+  font-size: 20px;
+}
+
+.esquerda {
+  width: 568px;
+}
+.esquerda button {
+  padding-left: 64px;
+  padding-right: 64px;
+  height: 64px;
+  max-width: 360px;
+  background-color: #3F8E00;
+  box-sizing: border-box;
+  border: 2px solid #62BA1B;
+  border-radius: 4px;
+  cursor: pointer;
+  box-shadow: 0 8px 30px rgba(63, 142, 0, 0.5019607843);
+  transition: transform 0.1s ease;
+}
+.esquerda button:active {
+  transform: scale(0.95);
+}
+
+.direita {
+  margin: 0;
+}
+.direita img {
+  width: 350px;
+  height: 350px;
+  border-radius: 100%;
+  object-fit: cover;
+}
+
+.lista-sem-estilo {
   list-style: none;
 }
 
-.link {
-  color: #9C9C9C;
+.link-sem-estilo {
   text-decoration: none;
 }
 
-header {
-  max-width: 1200px;
-  margin: auto;
-  margin-bottom: 66px;
-}
-header .menu {
-  margin-left: 30px;
-  margin-right: 50px;
-  padding: 0;
-  gap: 30px;
+.heading, .heading-2, .heading-1 {
+  color: #FFFFFF;
+  font-family: "Raleway", sans-serif;
 }
 
-.p-menu {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  line-height: 160%;
+.heading-1 {
+  font-size: 44px;
+  font-weight: 800;
+}
+
+.heading-2 {
+  font-size: 24px;
+  font-weight: 200;
+}
+
+.body-1 {
+  font-size: 16px;
+  color: #FFFFFF;
+  font-weight: 700;
+}
+
+.body-2 {
+  font-size: 14px;
+  color: #9C9C9C;
+  font-weight: 400;
+}
+
+.flex-list {
+  padding: 0;
+  margin: 0;
+  gap: 32px;
+}
+
+.header {
+  margin-bottom: 64px;
+}
+.header nav {
+  justify-content: space-between;
+  align-items: center;
 }
 
 .container {
@@ -96,68 +120,55 @@ header .menu {
   margin-left: auto;
   margin-right: auto;
 }
-.container p {
-  margin-bottom: 38px;
+
+.perfil {
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 64px;
+  gap: 32px;
 }
 
-.last-jobs h5 {
-  margin-left: 15px;
-  margin-right: 15px;
-}
-.last-jobs .lista-sem-estilo {
-  margin-left: 0;
-  margin-right: 0;
-  padding-left: 15px;
-  padding-right: 15px;
-  display: flex;
-  max-width: 1200px;
-  justify-content: flex-start;
-  align-items: flex-start;
-  gap: 70px;
-}
-.last-jobs .lista-sem-estilo img {
-  width: 110%;
-}
-
-button {
-  padding: 21px 64px;
-}
-
-.display-flex, .menu-navegação, .menu-social, .container {
-  display: flex;
-}
-
-.alinhar-h-esquerda, .menu-navegação {
-  justify-content: flex-start;
-}
-
-.alinhar-v-esquerda {
-  align-items: flex-start;
-}
-
-.alinhar-h-direita, .menu-social {
-  justify-content: flex-end;
-}
-
-.alinhar-v-direita {
-  align-items: flex-end;
-}
-
-.alinhar-coluna {
+.esquerda {
+  justify-content: center;
   flex-direction: column;
+  gap: 32px;
+  max-width: 100%;
 }
 
-.alinhar-linha {
-  flex-direction: row;
+.display-flex, .flex-list, .container {
+  display: flex;
 }
 
-.dividir-extremidades {
+.ultimos-trabalhos {
+  flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
+  box-sizing: border-box;
+  max-width: 1200px;
+}
+
+.lista-de-trabalhos {
+  margin: 0;
   padding: 0;
   justify-content: space-between;
 }
+.lista-de-trabalhos li {
+  justify-content: center;
+  width: 170px;
+  height: 60px;
+  box-sizing: border-box;
+}
 
-.ajuste-menu, header {
-  padding: 12px 80px;
+.heading, .heading-2, .heading-1 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  line-height: 100%;
+}
+
+.body, .body-2, .body-1 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  line-height: 160%;
 }
 
 @media (max-width: 768px) {
@@ -183,15 +194,15 @@ button {
   .perfil .left {
     width: 350px;
   }
-  .last-jobs {
+  .ultimos-trabalhos {
     max-width: 350px;
     justify-content: flex-start;
   }
-  .job-list {
+  .lista-de-trabalhos {
     overflow-x: auto;
     gap: 24px;
   }
-  .job-list li {
+  .lista-de-trabalhos li {
     min-width: 160px;
   }
 }
