--- a/assets/scss/design.scss
+++ b/assets/scss/design.scss
@@ -1,97 +1,124 @@
-$font-titulo : "Raleway",
-sans-serif;
-$font-texto : "IBM Plex Mono",
-monospace;
+$font-titulo : "Raleway", sans-serif;
+$font-texto : "IBM Plex Mono", monospace;
 
-$cor-bg-header: #1B1B1B;
-$cor-bg-body: #080808;
-$cor-bg-button: #3F8E00;
-$cor-text-title: #FFFFFF;
-$cor-text-body: #9C9C9C;
-$cor-border-button: #62BA1B;
+$cor-bg-body : #080808;
+$cor-bg-header : #1B1B1B;
+$cor-text-body : #9C9C9C;
+$cor-bg-button : #3F8E00;
+$cor-border-button : #62BA1B;
+$cor-text-title : #FFFFFF;
 
 body {
-    font-family: $font-texto;
     background-color: $cor-bg-body;
+    font-family: $font-texto;
     color: $cor-text-body;
-    font-size: 18px;
-    line-height: 160%;
+    
 }
 
 .header {
-    border-radius: 0 0 6px 6px;
-    background: $cor-bg-header;
-    color: $cor-text-body;
-    @extend .lista-sem-estilo;
-
-    .menu{
-        li{
-            color: $cor-text-body;
-            font-family: $font-texto;
-            letter-spacing: 0.14px;
-        }
+    .container{              
+        box-sizing: border-box;              
+        background-color: $cor-bg-header;
+        height: 74px;
+        padding-left: 100px;
+        padding-right: 100px;
+        border-bottom-left-radius: 6px;
+        border-bottom-right-radius: 6px;
     }
-
-    .menu-navegacao {
-        color: $cor-text-body;
-    }
-
-    .menu-social {
-        color: $cor-text-body;
-    }
-
 }
 
-.menu-responsivo{
-    gap: 16px;
+.menu-navegacao {
+    a {
+        font-size: 14px;
+        color: $cor-text-body;
+        font-weight: 400;
+        
+    }
+}
+
+.menu-responsivo {
     display: none;
+    gap: 16px;
     .botao-menu {
-        background: none;
         border: none;
+        background: none;
+        font-size: 20px;
+        color: $cor-text-body;
+    }
+}
+
+.menu-social {
+    a {
         color: $cor-text-body;
         font-size: 20px;
     }
 }
-.p-menu{
-font-size: 14px;
-color: $cor-text-body;
-font-weight: 400;
-}
 
-main {
-    .perfil {
-        h1 {
-            color: $cor-text-title;
-            font-family: $font-titulo;
-            font-size: 44px;
-        }
-
-        h3 {
-            color: $cor-text-title;
-            font-family: $font-titulo;
-            font-size: 24px;
-            font-weight: 200;
-        }
-
-        button {
-            font-size: 16px;
-            font-family: $font-texto;
-            font-weight: 700;
-            color: $cor-text-title;
-            padding: 21px 64px;
-            border-radius: 4px;
-            border: 1px solid $cor-border-button;
-            background: $cor-border-button;
-            box-shadow: 0 8px 30px 0 rgba($cor-bg-button, 0.50);
-        }
+.esquerda {
+    width: 568px;
+    button {
+        padding-left: 64px;
+        padding-right: 64px;
+        height: 64px;
+        max-width: 360px;
+        background-color: $cor-bg-button;
+        box-sizing: border-box;
+        border: 2px solid $cor-border-button;
+        border-radius: 4px;
+        cursor: pointer;
+        box-shadow: 0 8px 30px #3F8E0080;
+        transition: transform .1s ease;
+    }
+    button:active {
+        transform: scale(0.95);
     }
 }
+
+.direita{
+    margin: 0;
+    img{
+        width: 350px;
+        height: 350px;
+        border-radius: 100%;
+        object-fit: cover;
+    }
+}
+
+
 
 .lista-sem-estilo {
     list-style: none;
 }
 
-.link{
-    color: $cor-text-body;
+.link-sem-estilo {
     text-decoration: none;
+}
+
+.heading {
+    color: $cor-text-title;
+    font-family: $font-titulo;
+}
+
+.heading-1 {
+    @extend .heading;
+    font-size: 44px;
+    font-weight: 800;
+}
+
+.heading-2{
+    @extend .heading;
+    font-size: 24px;
+    font-weight: 200;
+}
+
+.body-1 {
+    font-size: 16px;
+    color: $cor-text-title;
+    font-weight: 700;
+}
+
+.body-2 {
+    font-size: 14px;
+    color: $cor-text-body;
+    font-weight: 400;
 }
