Atualizando meu CSS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,5 +80,10 @@ regras de break points
   }
 }
 /* breapoint para celulares*/
+@media (max-width: 667px) {
+  .navbar__menu {
+    /*--*/
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
